# TensorKaos

./: README.md  pyproject.toml
assets/shaders/: glitch_title.frag
assets/shaders/compute/: swarm_target.glsl
assets/shaders/cs_test/: comp.glsl  frag.glsl  geom.glsl  vert.glsl
tensorkaos/: __main__.py  window.py
tensorkaos/core/: guiview.py  utilities.py
tensorkaos/core/engine/: compute_entity_manager.py
tensorkaos/core/graph/: module.py
tensorkaos/core/graph/builders/: gamegen.py
tensorkaos/core/map/: module.py
tensorkaos/core/map/builders/: gamegen.py  generators.py  helpers.py
tensorkaos/utilities/: drawing_helpers.py  misc.py
tensorkaos/views/: __init__.py  graphmap.py  gridgame.py  pause.py  title.py
tensorkhaos/: __main__.py  guiview.py  window.py
tensorkhaos/core/: guiview.py
tensorkhaos/views/: __init__.py  gridgame.py  pause.py  primary.py  title.py
tests/cs_groups/: __main__.py
