[tool.poetry]
name = "tensorkaos"
version = "0.1.0"
description = ""
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numba = "^0.59.1"
arcade = "^2.6.17"
arcade-imgui = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
tkaos = "tensorkaos.__main__:main"